# ahk-cursor

./: .gitignore  README.md  mouse.kra  pyproject.toml
ahk_cursor/: .gitignore  Cursor.template.ahk  __main__.py  api.py  autostart.py  check_running.py  gen.py  launcher.py  logger.py  main.py  move_cursor.py  run_once.py  stop.py
tests/: simple.ahk  simple.py
