[project]
name = "soda-ahk-cursor"
version = "2025.3.8.0"
description = "Cursor helper for BURIKO Game Interpreter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "pyautogui",
    "pydantic>=2.10.4",
    "pywin32>=308",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["build>=1.2.2.post1", "twine>=6.0.1"]

[project.urls]
Repository = "https://github.com/soda92/ahk-cursor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["ahk_cursor"]
exclude = ["__pycache__", "*.pyc", "*.exe"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["ahk_cursor"]
exclude = ["__pycache__", "*.pyc"]


[project.scripts]
# main cli use
soda-ahk-cursor = "ahk_cursor.launcher:launcher"
soda-ahk-cursor-stop = "ahk_cursor.stop:stop"
# launched in AHK
ahk-cursor-l = "ahk_cursor.main:main"
