[project]
name = "soda-ahk-cursor"
version = "2025.4.26.0"
description = "Cursor helper for BURIKO Game Interpreter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyautogui",
    "pyinstaller>=6.15.0",
    "pywin32>=308",
]

[dependency-groups]
dev = ["build>=1.2.2.post1", "twine>=6.0.1"]

[project.urls]
Repository = "https://github.com/soda92/ahk-cursor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["ahk_cursor"]
exclude = ["__pycache__", "*.pyc", "*.exe"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["ahk_cursor"]
exclude = ["__pycache__", "*.pyc"]


[project.scripts]
# main cli use
soda-ahk-cursor = "ahk_cursor.launcher:launcher"
# launched in AHK
cursor_checker = "ahk_cursor.main:main"
